adding right panel elements

--- a/HTML/main.html
+++ b/HTML/main.html
@@ -15,6 +15,44 @@
         </div>
     </div>
 
+    <div class="container-fluid"> <!-- Main Window -->
+        
+        <div class="row main-panel"> <!-- Main Window Row -->
+
+
+            <div class="col-sm-8 left-panel text-center"> <!-- Left Panel -->
+                
+            </div> <!-- Left Panel End -->
+
+
+
+            <div class="col-sm-4 right-panel text-center"> <!-- Right Panel -->
+
+                <!-- Receptive Field -->
+                <div class="col-sm-12 heading-2-parent">
+                    <label class="main-heading-2">Receptive Field</label>
+                </div>
+
+                <div class="col-sm-12 heading-3-parent">
+                    <label id="rec-field" class="main-heading-3">70 x 70</label>
+                </div>
+
+                <!-- Input Shape -->
+                <div class="col-sm-12 heading-2-parent">
+                    <label class="main-heading-2">Minimum Input Shape</label>
+                </div>
+
+                <div class="col-sm-12 heading-3-parent">
+                    <label id="min-shape" class="main-heading-3">70 x 70</label>
+                </div>
+
+            </div> <!-- Right Panel End -->
+
+
+        </div> <!-- Main Window Row End -->
+
+    </div>
+
     <!-- JS Links -->
     <!-- Insert this line above script imports  -->
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
