adding add new layer button

--- a/HTML/main.html
+++ b/HTML/main.html
@@ -7,7 +7,7 @@
 <body>
     <!-- Title Bar -->
     <div id="title-bar">
-        <div id="title">Deep GUI</div>
+        <div id="title">Receptive Field Calculator</div>
         <div id="title-bar-btns">
             <a id="min-btn">-</a>
             <a id="max-btn">+</a>
@@ -22,6 +22,12 @@
 
             <div class="col-sm-8 left-panel text-center"> <!-- Left Panel -->
                 
+                <div class="heading-4-parent" id="new-layer-button-parent"> <!-- Add New Layer Button -->
+                    <a id="new-layer-button">
+                        + Add New Layer
+                    </a>
+                </div> <!-- Add New Layer Button End-->
+
             </div> <!-- Left Panel End -->
 
 
