--- a/HTML/main.html
+++ b/HTML/main.html
@@ -32,6 +32,16 @@
 
             <div class="col-sm-4 right-panel text-center"> <!-- Right Panel -->
 
+                <!-- 3D Image -->
+                <div class="col-sm-12 heading-2-parent">
+                    <label class="main-heading-2">3D Input</label>
+                </div>
+
+                <label class="switch">
+                    <input type="checkbox">
+                    <span class="slider round"></span>
+                </label>
+
                 <!-- Receptive Field -->
                 <div class="col-sm-12 heading-2-parent">
                     <label class="main-heading-2">Receptive Field</label>
