adding add new layer functionality

--- a/HTML/new-layer.html
+++ b/HTML/new-layer.html
@@ -16,9 +16,9 @@
                     <label for="layer-selection" class="main-heading-1"> Choose type of the layer</label>
                     <br>
                     <select id="layer-selector" onmousedown="this.size=3;"  onchange='this.size=0;' onblur="this.size=0;">
-                        <option value="Avg Pool 1D">Avg Pool Layer</option>
-                        <option value="Convolution 3D">Convolution Layer</option>
-                        <option value="Max Pool 3D">Max Pool Layer</option>
+                        <option value="Avg Pool">Avg Pooling</option>
+                        <option value="Convolution">Convolution</option>
+                        <option value="Max Pool">Max Pooling</option>
                     </select>
                     <br><br><br><br><br>
                 </div>
