--- a/HTML/main.html
+++ b/HTML/main.html
@@ -41,7 +41,7 @@
                 </div>
 
                 <label class="switch">
-                    <input type="checkbox">
+                    <input id="threeD" type="checkbox">
                     <span class="slider round"></span>
                 </label>
 
