initializing calc_receptive function

--- a/HTML/main.html
+++ b/HTML/main.html
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="col-sm-12 heading-3-parent">
-                    <label id="rec-field" class="main-heading-3">70 x 70</label>
+                    <label id="rec-field" class="main-heading-3">Please add at least a layer</label>
                 </div>
 
                 <!-- Input Shape -->
@@ -60,7 +60,7 @@
                 </div>
 
                 <div class="col-sm-12 heading-3-parent">
-                    <label id="min-shape" class="main-heading-3">70 x 70</label>
+                    <label id="min-shape" class="main-heading-3">Please add at least a layer</label>
                 </div>
 
             </div> <!-- Right Panel End -->
